language/move-prover/tests/sources/functional/schema_exp.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

   ┌── tests/sources/functional/schema_exp.move:8:9 ───
   │
 8 │         aborts_if false;
   │         ^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/schema_exp.move:20:5: bar_incorrect (entry)
   =     at tests/sources/functional/schema_exp.move:21:9: bar_incorrect
   =         c = <redacted>
   =     at tests/sources/functional/schema_exp.move:20:5: bar_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/schema_exp.move:42:9 ───
    │
 42 │         ensures result == i + 2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/schema_exp.move:48:5: baz_incorrect (entry)
    =     at tests/sources/functional/schema_exp.move:49:11: baz_incorrect
    =         i = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/schema_exp.move:48:5: baz_incorrect (exit)
